--- a/public/pages/telalogin.html
+++ b/public/pages/telalogin.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     
-    <link rel="stylesheet" href="/public/css/telalogin.css">
+    <link rel="stylesheet" href="/css/telalogin.css">
 
 </head>
 <body>
