--- a/public/pages/telageral.html
+++ b/public/pages/telageral.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Relatorio Geral - SENAI</title>
-    <link rel="stylesheet" href="/public/css/telageral.css">
+    <link rel="stylesheet" href="/css/telageral.css">
 </head>
 <body>
     
@@ -26,6 +26,11 @@
                     <a href="/public/pages/cadcursos.html">Cadastro de Cursos</a>
                 </li>
             </ul>
+        </div>
+        <div class="nav-menu" style="display: none;">
+            <span class="barra-menu1"></span>
+            <span class="barra-menu2"></span>
+            <span class="barra-menu3"></span>
         </div>
         <span></span>
     </header>
