--- a/public/pages/telageral.html
+++ b/public/pages/telageral.html
@@ -32,7 +32,7 @@
             <span class="barra-menu2"></span>
             <span class="barra-menu3"></span>
         </div>
-        <span></span>
+        <span class="span-espaco"></span>
     </header>
 
 
