--- a/public/pages/telageral.html
+++ b/public/pages/telageral.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Relatorio Geral - SENAI</title>
     <link rel="stylesheet" href="/css/telageral.css">
 </head>
+
 <body>
-    
+
     <header class="header-senai">
         <div class="logo-text">SENAI</div>
 
-         <div class="nav-bar">
+        <div class="nav-bar">
             <ul>
                 <li>
                     <a href="/public/pages/cadprofessores.html">Cadastro de Professores</a>
@@ -34,6 +36,22 @@
         </div>
         <span class="span-espaco"></span>
     </header>
+    <div class="container-menu" style="display: none;">
+        <ul>
+            <li>
+                <a href="/public/pages/cadprofessores.html">Cadastro de Professores</a>
+            </li>
+            <li>
+                <a href="/public/pages/cadambientes.html">Cadastro de Ambiente</a>
+            </li>
+            <li>
+                <a href="/public/pages/calendarioletivo.html">Calendario Letivo</a>
+            </li>
+            <li>
+                <a href="/public/pages/cadcursos.html">Cadastro de Cursos</a>
+            </li>
+        </ul>
+    </div>
 
 
     <div class="conteiner">
@@ -52,4 +70,5 @@
     </div>
 
 </body>
+
 </html>
