--- a/public/pages/cadcursos.html
+++ b/public/pages/cadcursos.html
@@ -5,34 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Cursos - SENAI</title>
     <link rel="stylesheet" href="/public/css/cadcursos.css">
+<style>
 
+    </style>
 </head>
 <body>
       <header class="header-senai">
-        <div class="logo-text">SENAI</div>
-
-          <div class="nav-bar">
-            <ul>
-                <li>
-                    <a href="/public/pages/gestaodecadastros.html">Gestão de Cadastro</a>
-                </li>
-                <li>
-                    <a href="/public/pages/cadprofessores.html">Cadastro de Professores</a>
-                </li>
-                <li>
-                    <a href="/public/pages/calendarioletivo.html">Calendario Letivo</a>
-                </li>
-                <li>
-                    <a href="/public/pages/cadambientes.html">Cadastro de Ambiente</a>
-                </li>
-                <li>
-                    <a href="/public/pages/telageral.html">Relatorio Geral</a>
-                </li>
-            </ul>
-        </div>
-        <span></span> 
     </header>
 
+    <div class="container-menu" style="display: none;">
+        <ul>
+            <li>
+                <a href="/public/pages/cadprofessores.html">Cadastro de Professores</a>
+            </li>
+            <li>
+                <a href="/public/pages/cadambientes.html">Cadastro de Ambiente</a>
+            </li>
+            <li>
+                <a href="/public/pages/calendarioletivo.html">Calendario Letivo</a>
+            </li>
+            <li>
+                <a href="/public/pages/cadcursos.html">Cadastro de Cursos</a>
+            </li>
+        </ul>
+    </div>
     <div class="container">
         <h1>Cadastro de Cursos</h1>
         <div class="grid-container">
@@ -78,4 +74,5 @@
         </div>
     </div>
 </body>
+<script src="../js/script.js"></script>
 </html>
