--- a/public/pages/telageral.html
+++ b/public/pages/telageral.html
@@ -6,36 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Relatorio Geral - SENAI</title>
     <link rel="stylesheet" href="/css/telageral.css">
+    <style>
+
+    </style>
 </head>
 
 <body>
 
     <header class="header-senai">
-        <div class="logo-text">SENAI</div>
-
-        <div class="nav-bar">
-            <ul>
-                <li>
-                    <a href="/public/pages/cadprofessores.html">Cadastro de Professores</a>
-                </li>
-                <li>
-                    <a href="/public/pages/cadambientes.html">Cadastro de Ambiente</a>
-                </li>
-                <li>
-                    <a href="/public/pages/calendarioletivo.html">Calendario Letivo</a>
-                </li>
-                <li>
-                    <a href="/public/pages/cadcursos.html">Cadastro de Cursos</a>
-                </li>
-            </ul>
-        </div>
-        <div class="nav-menu" style="display: none;">
-            <span class="barra-menu1"></span>
-            <span class="barra-menu2"></span>
-            <span class="barra-menu3"></span>
-        </div>
-        <span class="span-espaco"></span>
+        
     </header>
+
     <div class="container-menu" style="display: none;">
         <ul>
             <li>
@@ -53,10 +34,8 @@
         </ul>
     </div>
 
-
     <div class="conteiner">
         <h1>Relatorio Geral</h1>
-
         <div class="card">
             <h2>Relatorio Geral</h2>
             <ul id="relatorio-list" class="item-list">
@@ -70,5 +49,6 @@
     </div>
 
 </body>
+<script src="../js/script.js"></script>
 
 </html>
