--- a/public/pages/gestaodecadastros.html
+++ b/public/pages/gestaodecadastros.html
@@ -9,33 +9,31 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/gestaodecadastros.css">
+    <style>
+
+    </style>
 </head>
 
 <body>
     <header class="header-senai">
-        <div class="logo-text">SENAI</div>
-
-        <div class="nav-bar">
-            <ul>
-                <li>
-                    <a href="/public/pages/cadprofessores.html">Cadastro de Professores</a>
-                </li>
-                <li>
-                    <a href="/public/pages/cadambientes.html">Cadastro de Ambiente</a>
-                </li>
-                <li>
-                    <a href="/public/pages/calendarioletivo.html">Calendario Letivo</a>
-                </li>
-                <li>
-                    <a href="/public/pages/cadcursos.html">Cadastro de Cursos</a>
-                </li>
-                <li>
-                    <a href="/public/pages/telageral.html">Relatorio Geral</a>
-                </li>
-            </ul>
-        </div>
-        <span></span>
     </header>
+
+    <div class="container-menu" style="display: none;">
+        <ul>
+            <li>
+                <a href="/public/pages/cadprofessores.html">Cadastro de Professores</a>
+            </li>
+            <li>
+                <a href="/public/pages/cadambientes.html">Cadastro de Ambiente</a>
+            </li>
+            <li>
+                <a href="/public/pages/calendarioletivo.html">Calendario Letivo</a>
+            </li>
+            <li>
+                <a href="/public/pages/cadcursos.html">Cadastro de Cursos</a>
+            </li>
+        </ul>
+    </div>
 
     <div class="container">
         <h1>Gestão de Cadastros</h1>
@@ -149,6 +147,7 @@
         </div>
     </div>
     <script src="../js/gestaodecadastros.js"></script>
+<script src="../js/script.js"></script>
 
 </body>
 
