--- a/public/pages/telageral.html
+++ b/public/pages/telageral.html
@@ -18,26 +18,13 @@
     </header>
 
     <div class="container-menu" style="display: none;">
-        <ul>
-            <li>
-                <a href="/public/pages/cadprofessores.html">Cadastro de Professores</a>
-            </li>
-            <li>
-                <a href="/public/pages/cadambientes.html">Cadastro de Ambiente</a>
-            </li>
-            <li>
-                <a href="/public/pages/calendarioletivo.html">Calendario Letivo</a>
-            </li>
-            <li>
-                <a href="/public/pages/cadcursos.html">Cadastro de Cursos</a>
-            </li>
-        </ul>
+        
     </div>
 
-    <div class="conteiner">
-        <h1>Relatorio Geral</h1>
+    <div class="container">
+        <h1>Relatório Geral</h1>
         <div class="card">
-            <h2>Relatorio Geral</h2>
+            <h2>Relatório Geral</h2>
             <ul id="relatorio-list" class="item-list">
                 <li class="list-header">
                     <span>Professor</span>
