--- a/public/pages/cadambientes.html
+++ b/public/pages/cadambientes.html
@@ -17,25 +17,12 @@
     </header>
 
     <div class="container-menu" style="display: none;">
-        <ul>
-            <li>
-                <a href="/public/pages/cadprofessores.html">Cadastro de Professores</a>
-            </li>
-            <li>
-                <a href="/public/pages/cadambientes.html">Cadastro de Ambiente</a>
-            </li>
-            <li>
-                <a href="/public/pages/calendarioletivo.html">Calendario Letivo</a>
-            </li>
-            <li>
-                <a href="/public/pages/cadcursos.html">Cadastro de Cursos</a>
-            </li>
-        </ul>
+        
     </div>
-    
+
     <div class="container">
         <h1>Gestão de Ambientes</h1>
-        <div class="grid-container">
+        <div class="flex-container">
             <div class="card">
                 <h2>Novo Ambiente</h2>
                 <div class="form-group">
