--- a/public/pages/gestaodecadastros.html
+++ b/public/pages/gestaodecadastros.html
@@ -100,6 +100,14 @@
                         <input type="number" id="curso-cargahorariatotal" placeholder="Calculada automaticamente"
                             readonly>
                     </div>
+                    <div class="form-group">
+                        <label for="curso-turma">Turma</label>
+                        <select id="curso-turma">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                        </select>
+                    </div>
                 </div>
                 <!-- Builder de Disciplinas -->
                 <div class="disciplinas-builder">
