--- a/public/pages/gestaodecadastros.html
+++ b/public/pages/gestaodecadastros.html
@@ -19,7 +19,7 @@
     </header>
 
     <div class="container-menu" style="display: none;">
-        
+
     </div>
 
     <div class="container">
@@ -141,9 +141,8 @@
             <div class="vw-plugin-top-wrapper"></div>
         </div>
     </div>
-    <script src="../js/gestaodecadastros.js"></script>
-<script src="../js/script.js"></script>
-
+    <script type = "module" src="../js/gestaodecadastros.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
