--- a/public/pages/gestaodecadastros.html
+++ b/public/pages/gestaodecadastros.html
@@ -103,9 +103,12 @@
                     <div class="form-group">
                         <label for="curso-turma">Turma</label>
                         <select id="curso-turma">
-                            <option value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
+                            <option value="1DS-MILTON T.">1DS - MILTON T.</option>
+                            <option value="2DS1 - MILTON T.">2DS1 - MILTON T.</option>
+                            <option value="2DS1 - JULIO M.">2DS1 - JULIO M.</option>
+                            <option value="2DS2 - JULIO M.">2DS2 - JULIO M.</option>
+                            <option value="2DS1 - SESI">2DS1 - SESI</option>
+                            <option value="2DS2 - SESI">2DS2 - SESI</option>
                         </select>
                     </div>
                 </div>
