--- a/public/pages/telalogin.html
+++ b/public/pages/telalogin.html
@@ -15,13 +15,13 @@
     <div class="conteiner">
         <h2>Login</h2>
 
-        <form class="login-box">
+        <form class="login-box" id="loginForm">
             <div class="input">
-                <input type="text" placeholder="Usuarío ou Email" required>
+                <input type="text" placeholder="Usuarío ou Email" required id="emailInput">
             </div>
 
             <div class="input">
-                <input type="password" placeholder="Senha" required>
+                <input type="password" placeholder="Senha" required id="senhaInput">
             </div>
 
             <button type="submit" class="btn">Entrar</button>
@@ -32,4 +32,5 @@
         </form>
     </div>
 </body>
+<script src="../js/telalogin.js"></script>
 </html>
