--- a/public/pages/telaregistro.html
+++ b/public/pages/telaregistro.html
@@ -14,9 +14,9 @@
     <div class="conteiner">
         <h2>Registro</h2>
 
-        <form class="login-box" id="loginForm">
+        <form class="login-box" id="RegisterForm">
              <div class="input">
-                <input type="text" placeholder="Nome">
+                <input type="text" placeholder="Nome" required id="nomeInput">
             </div>
 
             <div class="input">
@@ -27,10 +27,10 @@
                 <input type="password" placeholder="Senha" required id="senhaInput">
             </div>
 
-            <button type="submit" class="btn">Entrar</button>
+            <button type="submit" class="btn">Registrar</button>
 
         </form>
     </div>
 </body>
-<script src="../js/telalogin.js"></script>
+<script src="../js/telaregistro.js"></script>
 </html>
